# AI-trader

./: .dockerignore  .env.example  .gitignore  docker-compose.build.yml  docker-compose.ghcr.yml  docker-compose.yml  install.ps1  install.sh
backend_api_python/: .gitignore  Dockerfile  backfill_log.txt  docker-entrypoint.sh  env.example  gunicorn_config.py  run.py  start.sh  weekly_report_output.json
backend_api_python/app/: __init__.py  _version.py
backend_api_python/app/config/: api_keys.py  settings.py
backend_api_python/app/data_providers/: adanos_sentiment.py  (+1 more)
backend_api_python/cache/: etf_universe.json
backend_api_python/migrations/: init.sql
backend_api_python/scripts/: backfill_2024.py  backfill_etf_fast.py  backfill_etf_universe.py  backfill_flow_2024.py  backfill_flow_batch.py  backfill_one_day.py  backfill_sectors_fast.py  backfill_structured_history.py  backtest_factor.py  check_flow_gaps.py  check_weekends.py  cn_batch_results_utf8.json  daily_flow_capture.py  export_openapi.py  fetch_real_sector_fund_flow.py  full_grid_to_csv.py  gen_txt_report.py  global_batch_results_utf8.json  grid_3factor.py  grid_search.py  latest_prediction_report.json  latest_prediction_report_text.txt  latest_weekly_report.json  latest_weekly_report_60d.json  latest_weekly_report_advanced.json  latest_weekly_report_structured.json  market_analysis.py  period_leaders.py  print_report.py  probe_cn_etf.json  probe_cn_etf_utf8.json  probe_cn_exchange_utf8.json  probe_cn_forum.json  probe_cn_forum_utf8.json  probe_cn_media_utf8.json  probe_cn_policy_utf8.json  probe_global_commodity_utf8.json  probe_global_macro_policy_utf8.json  probe_global_macro_utf8.json  probe_global_media.json  (+19 more)
backend_api_python/tests/: test_agent_v1.py  test_agent_v1_saas_guard.py  test_broker_market_policy.py  test_moex_data_source.py  test_openapi.py  test_usdt_payment_chains.py
mcp_server/: Dockerfile  pyproject.toml
mcp_server/src/ai_trader_mcp/: __init__.py  security.py  server.py
mcp_server/tests/: test_security_and_tools.py  test_transport_resolution.py
scripts/: generate-secret-key.ps1  generate-secret-key.sh
(+42 files in other folders)
